# environmental-health-platform

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.dev.yml
.github/workflows/: ci.yml  deploy.yml
api/: DockerFile  Dockerfile  Dockerfile.dev  pyproject.toml
api/api/: main.py
api/src/api/: __init__.py
backend/: DockerFile  Dockerfile  Dockerfile.dev  pyproject.toml  storage.py  test_storage.py
backend/backend/: storage.py
backend/backend/bronze/met_office/: README.md  client.py  geohash_registry.json  geohash_registry.py
backend/src/backend/: __init__.py
backend/src/backend/bronze/: base_client.py
backend/src/backend/bronze/met_office/: README.md  client.py
backend/src/backend/flows/: __init__.py  bronze.py  deploy.py
backend/src/backend/flows/met_office/: __init__.py  land_observation_stations.py
backend/tests/: client_test.py  storage_test.py
frontend/: DockerFile  Dockerfile  Dockerfile.dev  pyproject.toml
frontend/frontend/: main.py
frontend/src/frontend/: __init__.py  health_analysis.py
mock/: Dockerfile  Dockerfile.dev  pyproject.toml
mock-services/: Dockerfile  pyproject.toml
mock/src/mock/: __init__.py  met_office.py
mock/tests/: mock_services_test.py
mock_services/: pyproject.toml
mock_services/mock_services/: Dockerfile  main.py
mock_services/tests/: mock_services_test.py
utils/: pyproject.toml
utils/src/utils/: __init__.py  met_office_models.py  pydantic_utils.py
utils/src/utils/api/: base_client.py  met_office.py
utils/src/utils/models/: met_office.py
utils/src/utils/storage/: client.py
utils/tests/: met_office_utils_test.py  pydantic_utils_test.py
utils/utils/: met_office_models.py  pydantic_utils.py
