[project]
name = "environmental-health-platform"
version = "0.1.0"
description = "Cloud-agnostic public health platform"
readme = "README.md"
requires-python = ">=3.13"

[tool.uv]
package = false

[tool.uv.workspace]
# Maps all structural nodes explicitly
members = [
    "backend",
    "api",
    "frontend",
    "utils",
    "mock_services",
]

[tool.ty.environment]
# Points ty directly to the unified root virtual environment site-packages
python = "./.venv/bin/python"

[tool.ty.rules]
"invalid-argument-type" = "error"
"invalid-return-type" = "error"
"unresolved-import" = "error"


[tool.pytest.ini_options]
addopts = """
    --cov=backend/backend 
    --cov=api/api 
    --cov=frontend/frontend 
    --cov=utils/utils 
    --cov=mock_services/mock_services  
    --cov-report=term-missing
"""
markers = [
    "integration: marks tests as heavy integration or live network smoke tests"
]
testpaths = [
    "backend/tests",
    "api/tests",
    "frontend/tests",
    "utils/tests",
    "mock_services/tests"
]

[tool.coverage.report]
#  Enforces test coverage, set initially to be more conservative at 50%, increase iteratively over time
fail_under = 50
show_missing = true

[tool.coverage.run]
relative_files = true
omit = [
    "**/__init__.py",
    "**/.venv/*",
    "**/tests/**",
    "**/test_*.py"
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.16",
    "ty>=0.0.42",
]
