[project]
name = "environmental-health-platform"
version = "0.1.0"
description = "Cloud-agnostic public health platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
# Maps all structural nodes explicitly
members = [
    "backend",
    "api",
    "frontend",
    "utils",
    "mock-services",
]

[tool.ruff]
line-length = 88


[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes (Default syntax bugs)
    "B",    # flake8-bugbear (Design / Logic traps)
    "I",    # isort (Consistent, sorted import statements)
    "UP",   # pyupgrade (Modern Python syntax enforcer)
    "ANN",  # flake8-annotations (Strict function type hinting)
    "DTZ",  # flake8-datetimez (Forbids timezone-naive datetimes)
    "SIM",  # flake8-simplify (Code structural streamlining)
    "BLE",  # flake8-blind-except (Blocks broad catch-all exceptions)
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = false
ignore-fully-untyped = false
suppress-none-returning = false

[tool.ty.environment]
# Points ty directly to the unified root virtual environment site-packages
python = "./.venv/bin/python"

[tool.ty.rules]
"invalid-argument-type" = "error"
"invalid-return-type" = "error"
"unresolved-import" = "error"


[tool.pytest.ini_options]
addopts = """
    --cov=backend/backend 
    --cov=api/api 
    --cov=frontend/frontend 
    --cov=utils/utils 
    --cov=mock-services/mock_services  
    --cov-report=term-missing
"""
markers = [
    "integration: marks tests as heavy integration or live network smoke tests",
    "mocks: marks tests as reliant on mock services, only suitable for running in the dev-container",
]
testpaths = [
    "backend/tests",
    "api/tests",
    "frontend/tests",
    "utils/tests",
    "mock-services/tests"
]

[tool.coverage.report]
#  Enforces test coverage, set initially to be more conservative at 50%, increase iteratively over time
fail_under = 50
show_missing = true

[tool.coverage.run]
relative_files = true
omit = [
    "**/__init__.py",
    "**/.venv/*",
    "**/tests/**",
    "**/test_*.py"
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.16",
    "ty>=0.0.42",
]
