[project]
name = "api"
version = "0.1.0"
description = "FastAPI Analytical Gateway"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adlfs>=2026.5.0",
    "aiohttp>=3.14.0",
    "fastapi>=0.136.3",
    "fsspec>=2026.4.0",
    "polars>=1.41.2",
    "s3fs>=2026.4.0",
    "uvicorn>=0.48.0",
]
