[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "neilmolky", email = "neilmolky@zoho.com" }
]
requires-python = ">=3.13"
dependencies = [
    "adlfs>=2026.5.0",
    "aiohttp>=3.14.0",
    "fastapi>=0.136.3",
    "fsspec>=2026.4.0",
    "httpx>=0.28.1",
    "polars>=1.41.2",
    "s3fs>=2026.4.0",
    "uvicorn>=0.48.0",
    "utils",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
utils = { workspace = true }

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"frontend".msg = "Architectural Breach: Shared logic must only live in utils."
"backend".msg = "Architectural Breach: Shared logic must only live in utils."
"mock".msg = "Architectural Breach: Shared logic must only live in utils."
