[project]
name = "backend"
version = "0.1.0"
description = "Data ingestion, Prefect orchestration, and Polars processing pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adlfs>=2026.5.0",
    "aiohttp>=3.14.0",
    "fsspec>=2026.4.0",
    "patito>=0.8.6",
    "polars>=1.41.2",
    "prefect>=3.7.3",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "s3fs>=2026.4.0",
]
