[project]
name = "backend"
version = "0.1.0"
description = "Data ingestion, Prefect orchestration, and Polars processing pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adlfs>=2026.5.0",
    "fsspec>=2026.4.0",
    "httpx>=0.28.1",
    "patito>=0.8.6",
    "polars>=1.41.2",
    "polyfactory>=3.3.0",
    "prefect>=3.7.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "s3fs>=2026.4.0",
    "utils"
]

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.uv.sources]
utils = { workspace = true }

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"frontend".msg = "Architectural Breach: Shared logic must only live in utils."
"api".msg = "Architectural Breach: Shared logic must only live in utils."
"mock".msg = "Architectural Breach: Shared logic must only live in utils."
