[project]
name = "frontend"
version = "0.1.0"
description = "Analytical endpoints that expose access to the platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.3",
    "httpx>=0.28.1",
    "marimo>=0.23.8",
    "matplotlib>=3.10.9",
    "polars>=1.41.2",
    "utils",
]

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.uv.sources]
utils = { workspace = true }

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"backend".msg = "Architectural Breach: Shared logic must only live in utils."
"api".msg = "Architectural Breach: Shared logic must only live in utils."
"mock".msg = "Architectural Breach: Shared logic must only live in utils."
