[project]
name = "mock"
version = "0.1.0"
description = "Mock services emulating the api endopoints we connect to"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "uvicorn>=0.48.0",
    "utils",
    "pydantic>=2.13.4",
    "polyfactory>=3.3.0",
]

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.uv.sources]
utils = { workspace = true }

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"frontend".msg = "Architectural Breach: Shared logic must only live in utils."
"api".msg = "Architectural Breach: Shared logic must only live in utils."
"backend".msg = "Architectural Breach: Shared logic must only live in utils."
