[project]
name = "mock_services"
version = "0.1.0"
description = "Mock services emulating the api endopoints we connect to"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "uvicorn>=0.48.0",
    "utils",
]

[tool.uv.sources]
utils = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
