[project]
name = "utils"
version = "0.1.0"
description = "Common utilities and code that is required by different workspaces. Utils is the only package that should be a shared dependency for all workspaces."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13.4",
]

[tool.uv]
package = true


[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"
